--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "test-unit-ui": "vitest --ui"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "clsx": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
